# Melody

./: .gitignore  Cargo.toml  LICENSE-APACHE  flake.nix  toolchain.toml
src/: errors.rs  lib.rs  musicplayer.rs  song.rs  utils.rs
