[package]
authors = ["Melody <lovingmelody.io>"]
name = "melody"
version = "0.1.7"
license = "MIT/Apache-2.0"
description = "terminal Audio playback client"
repository = "https://github.com/Fuzen-py/Melody"
homepage = "https://github.com/Fuzen-py/Melody"
edition = "2021"

[[bin]]
name = "melody"
path = "bin/melody/main.rs"
required-features = []


[dependencies]
lofty = "0.20"
num-integer = "0.1"
tabwriter = "1"
rodio = "0.19"
directories = "5"
indicatif = "0.17"
rand = "0.8"
human-panic = "2"
walkdir = "2"
log = "0.4"
pretty_env_logger = "0.5"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
