[package]
authors = ["Melody <lovingmelody.io>"]
name = "melody"
version = "0.1.10"
license = "MIT/Apache-2.0"
description = "terminal Audio playback client"
repository = "https://github.com/LovingMelody/Melody"
homepage = "https://github.com/LovingMelody/Melody"
edition = "2024"

[[bin]]
name = "melody"
path = "bin/melody/main.rs"
required-features = []


[dependencies]
lofty = "0.22"
num-integer = "0.1"
tabwriter = "1"
rodio = "0.20"
directories = "6"
indicatif = "0.17"
rand = "0.9"
human-panic = "2"
walkdir = "2"
log = "0.4"
pretty_env_logger = "0.5"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
